# timecalc

./: Cargo.toml  LICENSE  README.md  codecov.yml
.github/workflows/: ci.yml  coverage.yml  release.yml
src/: lib.rs  main.rs
tests/: cli.rs  date_tests.rs  handler_tests.rs  parse_tests.rs  timezone_test.rs  timezone_tests.rs
